# PuRe-open

./: .gitignore  .travis.yml  CMakeLists.txt  Comparison.ipynb  Comparison2.ipynb  LPW.py  MANIFEST.in  README.md  TODO.txt  benchmark.ipynb  benchmark.py  benchmark_seg.py  compare_detectors.py  evaluate_benchmark.ipynb  eye_seg.py  final_benchmark.ipynb  opencv.build.sh  setup.py
.travis/: build_wheels_manylinux.sh  check_opencv_manylinux.sh  setup_mac.sh  setup_opencv_centos.sh  setup_opencv_mac.sh  setup_opencv_manylinux.sh  setup_opencv_win.sh  setup_win.sh  win_dependencies.sh
PuRe/: CMakeLists.txt  main.cpp  pure.cpp  pure.hpp  utils.cpp  utils.hpp
cpp/: CMakeLists.txt  pure.cpp
examples/cpp/: CMakeLists.txt  README.md  main.cpp
examples/python/: main.py  test.py
src/pupil_pure/: __init__.py  pure_detector.pyx
src/pure_detector/: CMakeLists.txt  ellipse_utils.pyx  pure_detector.cpp  pure_detector.pyx
src/pure_detector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
